# serializer version: 1
# name: test_ventilator_publish_ha_discovery[grex_publish_payload_grex_fan]
  dict({
    'command_topic': 'homeassistant/fan/grex/mode',
    'device': dict({
      'identifiers': 'grex_ventilator',
      'manufacturer': 'GREX',
      'model': 'Ventilator',
      'name': 'grex Ventilator',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'name': 'grex_fan',
    'payload_off': 'off',
    'payload_on': 'on',
    'spd_cmd_t': 'homeassistant/fan/grex/speed',
    'spd_stat_t': 'homeassistant/fan/grex/state',
    'spd_val_tpl': '{{ value_json.speed }}',
    'spds': list([
      'low',
      'medium',
      'high',
      'off',
    ]),
    'state_topic': 'homeassistant/fan/grex/state',
    'state_value_template': '{{ value_json.mode }}',
    'unique_id': 'grex_grex_fan',
  })
# ---
# name: test_ventilator_publish_ha_discovery[grex_publish_payload_grex_fan_mode]
  dict({
    'device': dict({
      'identifiers': 'grex_ventilator',
      'manufacturer': 'GREX',
      'model': 'Ventilator',
      'name': 'grex Ventilator',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:play-circle-outline',
    'name': 'grex_fan_mode',
    'state_topic': 'homeassistant/sensor/grex_fan/state',
    'unique_id': 'grex_grex_fan_mode',
    'value_template': '{{ value_json.fan_mode }}',
  })
# ---
# name: test_ventilator_publish_ha_discovery[grex_publish_payload_grex_fan_speed]
  dict({
    'device': dict({
      'identifiers': 'grex_ventilator',
      'manufacturer': 'GREX',
      'model': 'Ventilator',
      'name': 'grex Ventilator',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:speedometer',
    'name': 'grex_fan_speed',
    'state_topic': 'homeassistant/sensor/grex_fan/state',
    'unique_id': 'grex_grex_fan_speed',
    'value_template': '{{ value_json.fan_speed }}',
  })
# ---
# name: test_ventilator_register_topic_routes[grex_registered_topics]
  list([
    'homeassistant/fan/grex_fan/config',
    'homeassistant/fan/grex/mode',
    'homeassistant/fan/grex/speed',
    'homeassistant/sensor/grex_fan_mode/config',
    'homeassistant/sensor/grex_fan_speed/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
  ])
# ---
